[package]
name = "logos-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
logos = "0.14.0"


[lib]
name = "ast_calc"
path = "src/lib.rs"

[[bin]]
name = "ast-calc"
path = "src/main.rs"
